[package]
name = "brainflow-sys"
version = "0.1.0"
edition = "2018"
description = "FFI bindings to brainflow"
readme = "README.md"

[features]
default = []
generate_binding = ["bindgen"]
use_libftdi = []
use_openmp = []
build_oymotion_sdk = []
build_bluetooth = []

[build-dependencies]
bindgen = { version = "0.59.1", optional = true }
cmake = "0.1"

[dependencies]
libloading = "0.7.0"
