[package]
name = "brainflow"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainflow-sys = { path = "../brainflow-sys" }
getset = "0.1.1"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version ="1.0.130", features=["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
