[package]
name = "brainflow-fft"
description = "Pure Rust FFT implementation for BrainFlow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
brainflow-math = { path = "../brainflow-math" }
libm = "0.2"
