[package]
name = "brainflow-filter"
description = "Pure Rust digital filter design (Butterworth, Chebyshev, Bessel) for BrainFlow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
brainflow-math = { path = "../brainflow-math" }
libm = "0.2"
